[package]
name = "learn__crate__mongodb"
version = "0.1.0"
authors = ["Max Block <maxblock@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["sync"]