[package]
name = "learn__crate__mongodb"
version = "0.1.0"
authors = ["Max Block <maxblock@pm.me>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
serde = "1.0.105"
serde_json = "1.0.53"
mongodb = { version = "1.1.0", default-features = false, features = ["sync"] }
