[package]
name = "tokio-runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.1", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.17"
