[package]
name = "tokio-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "2.2.0", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.17"
